--- a/grpc-java-lab/grpc-java-web/src/main/resources/templates/main-layout/sidebar.html
+++ b/grpc-java-lab/grpc-java-web/src/main/resources/templates/main-layout/sidebar.html
@@ -52,11 +52,11 @@
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseComunidad"
            aria-expanded="true" aria-controls="collapseComunidad">
             <i class="fas fa-fw fa-building"></i>
-            <span>Comunidad</span>
+            <span>Gestionar</span>
         </a>
         <div id="collapseComunidad" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
-                <a class="collapse-item" th:href="@{/comunidad/gestionar}">Gestionar</a>
+                <a class="collapse-item" th:href="@{/gestionar/comunidad}">comunidades</a>
             </div>
         </div>
     </li>
